fix: update yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ name: CI
 # Controls when the action will run. 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master
 
 jobs:
   build-and-deploy:
